<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/darkNight"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/night"
        app:tint="@color/black" />


    <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/backColor"
        android:elevation="8dp"
        android:padding="12dp"
        app:bnc_mode="spread">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/item_jokes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/colorPrimaryDark"
            app:bt_icon="@drawable/jokes"
            app:bt_title="@string/Jokes" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/item_memes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/colorPrimaryDark"
            app:bt_icon="@drawable/splashicon"
            app:bt_title="@string/Memes" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/item_facts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/colorPrimaryDark"
            app:bt_icon="@drawable/facts"
            app:bt_title="@string/Facts" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/item_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/colorPrimary"
            app:bt_colorInactive="@color/colorPrimaryDark"
            app:bt_icon="@drawable/prefs"
            app:bt_title="@string/prefs" />

    </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

</RelativeLayout>