<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AboutFragment">

    <LinearLayout
        android:id="@+id/textViewPrefsTitle"
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/megrim"
            android:gravity="center"
            android:text="@string/prefs"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewPrefsTitle"
        android:layout_marginTop="0dp"
        android:background="@drawable/round_bg"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    android:padding="20dp"
                    app:cardBackgroundColor="@color/layout_bg"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/circleImageView"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/appicon5"
                            app:civ_border_color="@color/colorPrimaryDark"
                            app:civ_border_width="3dp" />

                        <TextView
                            android:id="@+id/textName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/things_text"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:layout_constraintTop_toBottomOf="@+id/textName"
                            tools:layout_editor_absoluteX="6dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/version"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            app:layout_constraintTop_toBottomOf="@+id/textName"
                            tools:layout_editor_absoluteX="6dp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/aboutProg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_person"
                        app:civ_border_color="#0091EA"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="@string/about_developer"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/layout_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text="@string/coffee"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/buyCoffee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/let_s_get_you_a_coffee"
                        android:textColor="#fff" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="75dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/India"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>